--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,11 @@
     <main>
       
       @@include('html/components/hero.html')
+      @@include('html/components/ticker.html')
       @@include('html/components/support.html')
+      @@include('html/components/stages.html')
+      @@include('html/components/participants.html')
+      @@include('html/components/ticker.html')
 
     </main>
     @@include('html/components/footer.html')
